[package]
name = "ahs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.3.1"
snarkvm-console-account = "0.16.17"
snarkvm-console-algorithms = "0.16.17"
snarkvm-console-network = "0.16.17"
snarkvm-console-program = "0.16.17"
wasm-bindgen = "0.2.90"
