[package]
name = "ahs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.3.1"
wasm-bindgen = "0.2.93"

[dependencies.snarkvm]
git = "https://github.com/AleoNet/snarkVM.git"
rev = "5bb50a8"
features = ["console"]
